# LibraryWeb

./: .env-example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  TODO  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  render.yaml  requirements.txt
backend/: .coverage  .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: deps.py  main.py  router.py
backend/app/api/: __init__.py  admin.py  auth.py  book.py  loan.py  reader.py  request.py  types.py  user.py
backend/app/config/: __init__.py  auth_config.py  email_config.py  oauth_config.py  project_config.py  s3_config.py
backend/app/models/: __init__.py  base.py  book.py  book_copy.py  loan.py  profile.py  reader.py  request.py  types.py  user.py
backend/app/modules/: __init__.py  redis_repository.py  s3_files.py
backend/app/repositories/: __init__.py  base.py  base_repository.py  book_repository.py  factory.py  request_repository.py  sqlalchemy.py  sqlalchemy_repository.py  user_repository.py
backend/app/schemas/: __init__.py  book.py  book_copy.py  history.py  loan.py  multi_dto.py  profile.py  reader.py  request.py  user.py
backend/app/services/: __init__.py  auth.py  book.py  loan.py  reader.py  request.py  user.py
backend/app/utils/: __init__.py  cache.py  errors.py  oauth2.py  sqladmin.py
backend/migrations/: env.py
backend/migrations/versions/: 01d49fed9d72_init_tables.py  398a513ee255_create_books.py  3f79e4e024d1_profile_id_to_reader_id.py  (+14 more)
backend/temp/: debt_report.docx  overdue_report.docx
backend/tests/: conftest.py
(+161 files in other folders)
